# wlrs

./: .gitignore  Cargo.toml  IMPLEMENTATION_NOTES.md  LICENSE  README.md  presentation.typ
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: ipc.rs  lib.rs  manifest.rs  types.rs  wallpaper.rs
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs  utils.rs  wallpaper_manager.rs
daemon/src/asset/: animated.rs  damage.rs  image.rs  mod.rs
daemon/src/renderer/: client.rs  config.rs  layers.rs  manager.rs  mod.rs  models.rs  pipeline.rs  wallpaper_layer.rs
daemon/src/renderer/models/: animated_texture.rs  color.rs  effect.rs  particle.rs  texture.rs
daemon/src/renderer/systems/: background.rs  mod.rs
daemon/src/shaders/: color.wgsl  gaussian.effect.wgsl  glitch.effect.wgsl  mod.rs  particle.wgsl  texture.wgsl  wave.effect.wgsl
docs/: creating_wallpapers.md  installation.md
examples/wallpapers/animated-webp-test/: manifest.toml
examples/wallpapers/color-test/: manifest.toml
examples/wallpapers/double-effect-test/: manifest.toml
examples/wallpapers/effect-test/: manifest.toml
examples/wallpapers/webp-test/: manifest.toml
frontend/: Cargo.toml
frontend/src/: cli.rs  main.rs
